@@ -15,6 +15,7 @@ v8.0.32
 - WL#15036: Support for type hints
 - BUG#34689812: Fix datetime conversion when using prepared cursors
 - BUG#34556157: Kerberos authorization fails when using SSPI as security interface
+- BUG#34499578: MySQLCursor.executemany() fails to correctly identify BULK data loading ops
 - BUG#30089671: Fix decoding VARBINARY columns when using a prepared cursor
 
 v8.0.31
